--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200 p-4 sm:p-6 lg:p-8">
     <div class="max-w-4xl mx-auto">
         <h1 class="text-3xl font-bold text-center text-gray-900 dark:text-white mb-4">CompTIA Network+ (N10-009) Practice Questions</h1>
-        <p class="text-center text-gray-600 dark:text-gray-400 mb-10">1.0 Networking Concepts </p>
+        <p class="text-center text-gray-600 dark:text-gray-400 mb-10">Domain 1.0: Networking Concepts </p>
 
         <!-- Objective 1.1 -->
         <div class="mb-12">
@@ -2259,6 +2259,7 @@
     </div>
 </body>
 </html>
+
 
 
 
